@@ -395,12 +395,15 @@ class Resource(Dict):
             if not getattr(obj, name) and arg.field not in value:
                 continue
 
-            if arg.field not in value:
-                d.add(field.name, diff.ValueDiff("", "INITIAL_VALUE"))
-                continue
+            # If a field is present in the remote, then diff against that
+            # If a field is not present in the remote, diff against the default
+            if arg.field in value:
+                remote_val = value[arg.field]
+            else:
+                remote_val = arg.get_default(obj)
 
             try:
-                d.add(field.name, Argument(field.name, field).diff(runner, obj, value[arg.field]))
+                d.add(field.name, Argument(field.name, field).diff(runner, obj, remote_val))
             except FieldNotPresent:
                 continue
 
