@@ -4,7 +4,8 @@ Changelog for Touchdown
 0.5.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Touchdown now reports resource changes better, especially when attributes
+  transition from unset to set states.
 
 
 0.5.0 (2016-01-15)
